// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows you to pass custom props that are allowed 1`] = `
.css-1r7lsit,
[data-css-1r7lsit] {
  padding: 1px;
}

<div
  class="css-1r7lsit"
  id="hello"
/>
`;

exports[`allows you to specify the tag rendered by a component 1`] = `
.css-110n7f9,
[data-css-110n7f9] {
  height: 1px;
  width: 2px;
}

<svg
  class="css-110n7f9"
  height="2"
/>
`;

exports[`can accept classNames instead of style objects 1`] = `
.css-164yopx,
[data-css-164yopx] {
  padding-top: 1px;
  padding-right: 2px;
  padding-bottom: 3px;
  padding-left: 4px;
}

<div
  class="css-164yopx extra-thing"
/>
`;

exports[`can accept functions which return string class names 1`] = `
.css-14wicqh,
[data-css-14wicqh] {
  padding-right: 2px;
  padding-bottom: 2px;
}

<div
  class="css-14wicqh is-active extra-thing"
/>
`;

exports[`can be configured to use the displayName in the className 1`] = `
<div
  class="css-nil Hi-There"
/>
`;

exports[`can use pre-built glamorous components with css attributes 1`] = `
.css-1t62idy,
[data-css-1t62idy] {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
}

<a
  class="css-1t62idy is added to classes"
  href="/is-forwarded"
  id="is-forwarded"
/>
`;

exports[`can use pre-built glamorous components with css prop 1`] = `
.css-1d3tm0b,
[data-css-1d3tm0b] {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  background: blue;
}

<a
  class="css-1d3tm0b is added to classes"
  href="/is-forwarded"
  id="is-forwarded"
/>
`;

exports[`css prop with a className 1`] = `
.css-1ezp9xe,
[data-css-1ezp9xe] {
  color: red;
}

<section
  class="css-nil css-1ezp9xe abc-123"
/>
`;

exports[`css prop with a function 1`] = `
.css-1ps4aij,
[data-css-1ps4aij] {
  font-size: 10px;
  padding: 20px;
  margin: 30px;
}

<section
  class="css-1ps4aij"
/>
`;

exports[`css prop with an array 1`] = `
.css-10ql5rd,
[data-css-10ql5rd] {
  margin-top: 1px;
  margin-right: 2px;
  margin-bottom: 2px;
}

<section
  class="css-10ql5rd"
/>
`;

exports[`css prop with an object 1`] = `
.css-1dmiui7,
[data-css-1dmiui7] {
  font-size: 12px;
}

<section
  class="css-1dmiui7"
/>
`;

exports[`forwards props when the GlamorousComponent.rootEl is known 1`] = `
.css-mhpxxj,
[data-css-mhpxxj] {
  padding: 1px;
  margin: 1px;
}

<div
  class="css-mhpxxj"
>
  He likes it! Hey Mikey!
</div>
`;

exports[`merges composed component forwardProps 1`] = `
<div
  class="css-nil"
/>
`;

exports[`merges composed component styles for reasonable overrides 1`] = `
.css-1k8eh41,
[data-css-1k8eh41] {
  margin-top: 1px;
  margin-right: 2px;
  padding-top: 5px;
  padding-right: 6px;
  margin-bottom: 3px;
  margin-left: 4px;
}

<div
  class="css-1k8eh41 other classes are not removed"
/>
`;

exports[`renders a component with theme properties 1`] = `
.css-1fyph4i,
[data-css-1fyph4i] {
  color: red;
  padding: 10px;
}

<div
  class="css-1fyph4i"
/>
`;

exports[`sanity test 1`] = `
.css-1b98bkc,
[data-css-1b98bkc] {
  margin-left: 24px;
}

<div
  class="css-1b98bkc"
/>
`;

exports[`style objects can be arrays and glamor will merge those 1`] = `
@media (max-width: 640px) {
  .css-1bzhvkr,
  [data-css-1bzhvkr] {
    line-height: 1.3;
    font-size: 20px;
    border-radius: 50%;
  }
}

<div
  class="css-1bzhvkr"
/>
`;

exports[`styles can be functions that accept props 1`] = `
.css-ig7b2c,
[data-css-ig7b2c] {
  margin-top: 2px;
}

<div
  class="css-ig7b2c"
/>
`;

exports[`will forward \`color\` to an svg 1`] = `
<svg
  class="css-nil"
  color="red"
/>
`;

exports[`will not forward \`color\` to a div 1`] = `
.css-1ezp9xe,
[data-css-1ezp9xe] {
  color: red;
}

<div
  class="css-1ezp9xe"
/>
`;

exports[`with theme prop of padding 10px 1`] = `
.css-1p841yy,
[data-css-1p841yy] {
  color: red;
  padding: 10px;
}

<glamorous(div)
  theme={
    Object {
      "padding": 10,
    }
  }
>
  <div
    className="css-1p841yy"
  />
</glamorous(div)>
`;

exports[`with theme prop of padding 20px 1`] = `
.css-1e41o48,
[data-css-1e41o48] {
  color: red;
  padding: 20px;
}

<glamorous(div)
  theme={
    Object {
      "padding": 20,
    }
  }
>
  <div
    className="css-1e41o48"
  />
</glamorous(div)>
`;
